--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,7 +35,7 @@
             Você tem 2 horas livres no seu dia
           </span>
           <a href="profile" id="avatar-profile">
-            <p>Fernanda <span>Ver perfil</span></p>
+            <p> Fernanda <span>Ver perfil</span></p>
             <img
               src="https://github.com/fernandamullerb.png"
             />
@@ -103,7 +103,7 @@
               <div class="actions column flex">
                 <p class="sr-only">Ações</p>
                 <a 
-                  href="job-edit" 
+                  href="/job/<%= job.id %>" 
                   class="button white edit" 
                   title="Editar Job">
                   <img src="/images/edit-24.svg" alt="Editar Job" />
