--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -29,17 +29,17 @@
 
     <div class="container animate-up delay-2">
       <aside class="card">
-        <img src="<%= profile.avatar %> " alt="<%= profile.name %> ">
-        <h2> <% profile.name %> </h2>
+        <img src="<%= profile.avatar %>" alt="<%= profile.name %> ">
+        <h2><%= profile.name %> </h2>
         <p>
           O valor da sua hora é <br/>
-          <strong>R$ <%= profile["value-hour"].toFixed(2).replace(".",",") %>  </strong>
+          <strong>R$ <%= profile["value-hour"].toFixed(2).replace('.', ',') %> </strong>
         </p>
         <button class="button green" form="form-profile" type="submit">Salvar dados</button>
       </aside>
       <main>
 
-        <form id="form-profile" method="post" action="/profile">
+        <form id="form-profile" action="/profile" method="post">
           <fieldset>
             <legend>Dados do perfil</legend>
             <div class="separator light"></div>
@@ -47,8 +47,9 @@
             <div class="input-group">
               <div class="input-wrapper">
                 <label for="name">Nome</label>
-                <input type="text" id="name" name="name" value="<%= profile.name %>"/>
+                <input type="text" id="name" name="name" value="<%= profile.name %> "/>
               </div>
+
               <div class="input-wrapper">
                 <label for="avatar">Link da foto</label>
                 <input 
@@ -56,7 +57,7 @@
                 type="url" 
                 id="avatar" 
                 name="avatar"
-                value="<%= profile.avatar %>" />
+                value="<%= profile.avatar %> " />
               </div>
             </div>
           </fieldset>
@@ -74,7 +75,7 @@
                   id="monthly-budget" 
                   name="monthly-budget" 
                   placeholder="R$"
-                  value="<%= profile["monthly-budget"]%>" />
+                  value="<%= profile["monthly-budget"] %> "/>
               </div>
 
               <div class="input-wrapper">
@@ -84,7 +85,7 @@
                   type="number"
                   id="hours-per-day" 
                   name="hours-per-day"
-                  value="<%= profile["hours-per-day"]%>" />
+                  value="<%= profile["hours-per-day"] %>" />
               </div>
             </div>
 
@@ -96,7 +97,7 @@
                   type="number"
                   id="days-per-week" 
                   name="days-per-week"
-                  value="<%= profile["days-per-week"]%>" />
+                  value="<%= profile["days-per-week"] %>" />
               </div>
 
               <div class="input-wrapper">
@@ -106,7 +107,7 @@
                   type="number" 
                   id="vacation-per-year" 
                   name="vacation-per-year"
-                  value="<%= profile["vacation-per-year"]%>" />
+                  value="<%= profile["vacation-per-year"] %>" />
               </div>
             </div>
           </fieldset>
@@ -117,4 +118,3 @@
     <!-- end container -->
   </body>
 </html>
- 
